# PySparseCoalescedTsetlinMachineCUDA

./: pyproject.toml  setup.py
PySparseCoalescedTsetlinMachineCUDA/: kernels.py  tm.py
PySparseCoalescedTsetlinMachineCUDA/cuda/: code_clauses.cu  code_encode.cu  code_evaluate.cu  code_prepare.cu  code_transform.cu  code_update.cu
examples/: Groups_Example.py  MNISTConvolutionClassRepresentation.py  MNISTConvolutionPrintClauses.py  MNISTHypervectorDemo.py  MNISTMultiOutput.py  MNISTVisualTokensDemo.py  ModelSaveandLoad.py  YahooTextCategorizationDemoBatch.py  test_XOR_resistance.py  test_grps.py  test_grs.py  test_mnist_resistance.py  test_mnist_states.py  test_state_values.py
